src/syntax/tests/data/negative/for-loop-1.hsh
for arg in  do
	1
end
